syntax = "proto3";

import "auth_model.proto";
import "users_model.proto";

package auth;

option go_package = "cinematic.back/api/users/pb";

message AuthByCredentialsRequest {
  UserCredentials credentials = 1;
}

message AuthByCredentialsResponse {
  Tokens tokens = 1;
}

message RegisterRequest {
  UserCredentials credentials = 1;
  string username = 2;
}

message RegisterResponse {
  Tokens tokens = 1;
}

message AuthByAccessTokenRequest {
  string token = 1;
}

message AuthByAccessTokenResponse {
  users.User user = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  Tokens tokens = 1;
}

message ChangePasswordRequest {
  string user_id = 1;
  string password = 2;
}

message ChangePasswordResponse {
  Tokens tokens = 1;
}

service AuthService {
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {};
  rpc Register(RegisterRequest) returns (RegisterResponse) {};
  rpc AuthByCredentials(AuthByCredentialsRequest) returns (AuthByCredentialsResponse) {};
  rpc AuthByAccessToken(AuthByAccessTokenRequest) returns (AuthByAccessTokenResponse) {};
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {};
}